<resources>
    <string name="app_name">Game Box</string>
    <string name="titre">Bienvenue dans la Game Box !</string>
    <string name="commencer">Appuyez pour commencer !</string>
    <string name="titre_accueil">Choississez votre jeu :</string>
    <string name="pendu">Pendu</string>
    <string name="snake">Snake</string>
    <string name="imageplay">TODO</string>
    <string name="image_pendu">TODO</string>
    <string name="logo">TODO</string>
    <string name="img_snake">TODO</string>
    <string name="send">Envoyer</string>
    <string name="rejouer">Rejouer</string>
</resources>